css/style.css
@charset "utf-8";
@font-face {
    font-family: 'JosefinSans';
    src: url(font/JosefinSans-Italic-VariableFont_wght.ttf);
}

html {
    background-image: url("../assets/img/Background_home_page.jpg");
}

body {
    font-family: 'JosefinSans';
    margin: 0;
    padding: 0;
    border: 0;
}

header {
    font-size: larger;
    font-weight: bold;
    background-color: #FFFFFD;
    border-bottom: solid red;
    box-shadow: 0px 1px 5px;
}

.navbar {
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.navbar a {
    color: red;
    margin-top: 15px;    
    padding-left: 30px;
    text-decoration: none;
}

.navbar a:hover {
    color: rgb(128, 0, 0);
}

.navbar a.active {
    color: rgb(128, 0, 0);
}

.navbar .icon {
    display: none;
}


@media screen and (max-width: 720px) {
    .navbar {
        display: flex;
        justify-content: right;
        margin-right: 30px;
    }

    .navbar a:not(:last-child) {
        display: none;
    }

    .navbar a.icon {
        float: right;
        display: block;
    }
}

@media screen and (max-width: 720px) {
    .navbar.responsive {
        position: relative;
    }

    .navbar.responsive a .icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .navbar.responsive a {
        float: none;
        display: block;
        text-align: left;
    }
}

#HomeTitle {
    color: red;
    text-align: center;
    padding: 100px 0px 20px 0px;
}

.landing-picture {
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing-picture img {
    border-radius: 5%;
}

.store-button {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 30px 0px 20px 0px;
}

.f-content {
    display: flex;
    justify-content: space-between;
    border-top: solid blue;
    box-shadow: 10px 0px 15px;    
}

